clusters/k3s-cluster/organizr/organizr-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: organizer
---
apiVersion: v1
kind: Service
metadata:
  name: organizer-svc
  namespace: organizer
spec:
  type: ClusterIP
  ports:
    - port: 8041
      targetPort: 8041
---
apiVersion: v1
kind: Endpoints
metadata:
  name: organizer-endpoint
  namespace: organizer
subsets:
  - addresses:
      - ip: 192.168.1.99
    ports:
      - port: 8041
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: organizer-ingress
  namespace: organizer
  labels:
    name: organizer-ingress
spec:
  rules:
    - host: dashboard.jacobbanghart.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: organizer-svc
                port:
                  number: 8041
